; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_stack_user.c_user_dlm_lvb_valid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_stack_user.c_user_dlm_lvb_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.ocfs2_dlm_lksb = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@DLM_SBF_VALNOTVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%union.ocfs2_dlm_lksb*)* @user_dlm_lvb_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @user_dlm_lvb_valid(%union.ocfs2_dlm_lksb* %0) #0 {
  %2 = alloca %union.ocfs2_dlm_lksb*, align 8
  %3 = alloca i32, align 4
  store %union.ocfs2_dlm_lksb* %0, %union.ocfs2_dlm_lksb** %2, align 8
  %4 = load %union.ocfs2_dlm_lksb*, %union.ocfs2_dlm_lksb** %2, align 8
  %5 = bitcast %union.ocfs2_dlm_lksb* %4 to %struct.TYPE_2__*
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @DLM_SBF_VALNOTVALID, align 4
  %9 = and i32 %7, %8
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  %13 = zext i1 %12 to i32
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
